# stml

./: LICENSE  Makefile  README.md  dune-project  stml.opam  test.ml
.github/workflows/: webeditor.yml
src/main/: dune  main.ml
src/parsing/: ast.ml  ast.mli  dune  lexer.mll  parser.mly
src/system/: algorithmic.ml  algorithmic.mli  annotations.ml  annotations.mli  dune  env.ml  msc.ml  msc.mli  reconstruction.ml  reconstruction_aux.ml  reconstruction_aux.mli
src/types/: additions.ml  additions.mli  base.ml  base.mli  dune  tvar.ml  tvar.mli
src/utils/: dune
webeditor/: doc.html  index.html  tokenizer.js
webeditor/examples/: abstract.stml  list.json  occtyp.stml  rec.stml
