(library
 (name main)
 (public_name stml)
 (wrapped false)
 (libraries types parsing utils system)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (modules main))

(executable
 (name prototype)
 (libraries main)
 (modules prototype))

(executable
 (name lib_js)
 (libraries main yojson zarith_stubs_js)
 (modes js)
 (preprocess (pps js_of_ocaml-ppx))
 (modules lib_js))

(env
 (_
  (js_of_ocaml
   (flags (:standard --enable effects))
   (build_runtime_flags (:standard --enable effects)))))